src/objects/Period__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month_1__c</fullName>
        <label>Month 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month_2__c</fullName>
        <label>Month 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month_3__c</fullName>
        <label>Month 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <description>this number must be the  numeric year (2011, 2012, etc) or the numeric portion of the quarter (1,2,3,4 = Q1,Q2,Q3,Q4)</description>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentPeriod__c</fullName>
        <label>ParentPeriod</label>
        <referenceTo>Period__c</referenceTo>
        <relationshipLabel>Periods (ParentPeriod)</relationshipLabel>
        <relationshipName>Periods2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Period</label>
    <nameField>
        <label>Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>